Added App enablement script file

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discount Tire Login App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Discount Tire Login App</title>
+  <script src="https://global.oktacdn.com/okta-auth-js/7.0.0/okta-auth-js.min.js" type="text/javascript"></script>
+  <script type="text/javascript" src="/lib/gk/AppEnablementConnector.js"></script>
+  <script type="text/javascript" src="/lib/gk/Common.js"></script>
+  <script type="text/javascript" src="/lib/gk/Masterdata.js"></script>
+  <script type="text/javascript" src="/lib/gk/ExternalMasterdata.js"></script>
+  <script type="text/javascript" src="/lib/gk/Pos.js"></script>
+  <script type="text/javascript" src="/lib/gk/Pos_CST.js"></script>
+  <script type="text/javascript">
+    var oAppEnablementCommonInstance = new comGkSoftwareGkrAppEnablementApi.Common();
+    var oAppEnablementExternalMasterdataInstance = new comGkSoftwareGkrAppEnablementApi.ExternalMasterdata();
+    var oAppEnablementMasterdataInstance = new comGkSoftwareGkrAppEnablementApi.Masterdata();
+    var oAppEnablementPosInstance = new comGkSoftwareGkrAppEnablementApi.Pos();
+    var oAppEnablementPosInstance_CST = new comGkSoftwareGkrAppEnablementApi.Pos_CST();
+  </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/index.jsx"></script>
+</body>
+
 </html>
